--- a/.gitignore
+++ b/.gitignore
@@ -72,8 +72,9 @@ typings/
 .yarn
 
 # dotenv environment variables file
-# .env
+ .env
 .env.test
+backend/.env
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
