--- a/.gitignore
+++ b/.gitignore
@@ -72,9 +72,14 @@ typings/
 .yarn
 
 # dotenv environment variables file
- .env
-.env.test
+.env
+.env.*
+!.env.example
+!.env.production.example
 backend/.env
+backend/.env.*
+frontend/.env
+frontend/.env.*
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
